kubernetes/doc-home-cluster/apps/selfhosted/lobechat/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: lobechat
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: lobechat
  egress:
    # plex-addons
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: crunchy-postgres
            postgres-operator.crunchydata.com/data: postgres
            k8s:io.kubernetes.pod.namespace: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
